# DocPlatform

./: .gitignore  AI_TEMPLATE_CONVERTER.md  GOOGLE_OAUTH_SETUP.md  README.md  SALESFORCE_SETUP.md  docker-compose.yml  package-lock.json  package.json  start-all.ps1  start_platform.ps1
.github/workflows/: ci-cd.yml
backend/: .env  Dockerfile  credentials.json  go.mod  pyproject.toml  setup_google_drive.py  start_server.py  test_ai.py  token.pickle
backend/app/: __about__.py  __init__.py  main.py
backend/app/api/routes/: __init__.py  auth.py  document.py  salesforce.py  templates.py
backend/app/api/v1/: __init__.py  ai.py  templates.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  document.py  template.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  document_service.py  gemini_service.py  google_drive.py  salesforce_service.py  servicenow_service.py  template_service.py
backend/docplatform_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/storage/: docplatform.db
frontend/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-production/: 1.pack  2.pack  index.pack  index.pack.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js
frontend/.next/server/app/dashboard/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @heroicons.js  attr-accept.js  file-selector.js  next.js  object-assign.js  prop-types.js  react-dropzone.js  react-is.js  tslib.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  not-found.js
frontend/.next/static/webpack/: 4ce4dd1525eb1e2f.webpack.hot-update.json  ac9683d432955a39.webpack.hot-update.json  b79906cf5495ecd4.webpack.hot-update.json  e18a2a66492fdc39.webpack.hot-update.json  e90cb86746a6568f.webpack.hot-update.json  webpack.00a31baf8db0f85f.hot-update.js  webpack.00de2cdd9929bf9e.hot-update.js  webpack.012ecbe94e7b8648.hot-update.js  webpack.05336337b10e0836.hot-update.js  webpack.058a1f6d0b8bbf8a.hot-update.js  webpack.069a5cf55088a795.hot-update.js  webpack.06a17e6784bd771f.hot-update.js  webpack.06b7295b69b75700.hot-update.js  webpack.06e17d2f62ea7e51.hot-update.js  webpack.06f8f2b64a66e7e8.hot-update.js  webpack.07eaf8abe9ea0a2d.hot-update.js  webpack.0920df864c296dea.hot-update.js  webpack.0abdf44770bcea38.hot-update.js  webpack.0b5be5362ce99009.hot-update.js  webpack.0c93d92981a80741.hot-update.js  webpack.0cbadff2311936a7.hot-update.js  webpack.0ce8b27b61448305.hot-update.js  webpack.0dde9623f6c7db0f.hot-update.js  webpack.0e46c73623e16370.hot-update.js  webpack.0ee861e3af9e1edf.hot-update.js  webpack.0f06aacc43334634.hot-update.js  webpack.0f9a270e43c1716a.hot-update.js  webpack.103d03b3b05f03d4.hot-update.js  webpack.1188a7e4e819de28.hot-update.js  webpack.138edf7b0fb605ad.hot-update.js  webpack.13d1252f98a22370.hot-update.js  webpack.14daa832363c4f9e.hot-update.js  webpack.16a4ae936c17dc6a.hot-update.js  webpack.16e6d845d4e0f911.hot-update.js  webpack.16fa04302b1bb8ae.hot-update.js  webpack.19afb3d0797a252d.hot-update.js  webpack.1da4f7413e7bfa16.hot-update.js  webpack.1f93eda8386a171c.hot-update.js  webpack.22117e0a71c20a6a.hot-update.js  webpack.2290db2e156508e1.hot-update.js  (+130 more)
frontend/.next/types/app/: layout.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: AIAssistantPanel.tsx  DocumentUpload.tsx  DocumentViewer.tsx  ErrorBoundary.tsx  FloatingInsertToolbar.tsx  LoadingSpinner.tsx  SalesforceMetadataPanel.tsx  SalesforcePanel.tsx  StatusCheck.tsx  SuggestionOverlay.tsx  TemplateConverter.tsx  TopHeader.tsx
frontend/src/types/: mammoth.d.ts
scripts/: dev-setup.sh
shared/types/: api.ts
(+261 files in other folders)
